# pinelib

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  README.md  RELEASE_4_0.md  SECURITY.md
fixtures/tradingview/: cases.json  tv_oracle_capture_2026-04-27.json
fixtures/tradingview/calc_on_every_tick_supplied_ticks/: evidence.json  oracle_script.pine
fixtures/tradingview/crypto_247_intraday_bars/: bars.csv  evidence.json  expected_bars.json  oracle_script.pine
fixtures/tradingview/request_security_gaps_lookahead/: evidence.json  expected_security.csv  oracle_script.pine  requested_bars.csv
fixtures/tradingview/request_security_lower_tf_intrabar_validation/: bars.csv  evidence.json  expected_lower_tf.json  lower_tf_bars.csv
fixtures/tradingview/session_time_time_close_timeframe_guard/: evidence.json  expected_time.csv
fixtures/tradingview/strategy_exit_oca_reservation/: evidence.json  expected_trades.csv  filled_orders.csv  oracle_script.pine  strategy_report_data.json  study_plots.csv
fixtures/tradingview/strategy_market_limit_stop_stop_limit/: bars.csv  evidence.json  expected_trades.csv  filled_orders.csv  oracle_script.pine  strategy_report_data.json  study_plots.csv
fixtures/tradingview/ta_stateful_indicators/: bars.csv  evidence.json  expected_indicators.csv
pinelib/: __init__.py  __main__.py  backtest.py  distribution.py  errors.py  io.py  parity.py  plot.py  quality.py  reference.py  release.py  version.py  visual.py
pinelib/color/: __init__.py
pinelib/compat/: __init__.py  marketdata.py
pinelib/core/: __init__.py  bar.py  inputs.py  na.py  operators.py  precision.py  runtime.py  series.py  timefunc.py  types.py
pinelib/math/: __init__.py
pinelib/request/: __init__.py  footprint.py  providers.py  security.py
pinelib/strategy/: __init__.py  backtest_engine.py  context.py  models.py
pinelib/string/: __init__.py
pinelib/ta/: __init__.py  _impl.py  _impl_channels.py  _impl_core.py  _impl_momentum.py  _impl_states.py  _impl_statistics.py  _impl_stats2.py  _impl_trend.py  momentum.py  moving_average.py  statistics.py  trend.py  utils.py  volatility.py  volume.py
scripts/: build_release.py  check_release_artifact_selftest.py  check_release_integrity.py  install.sh  release_gate.sh  run_tv_golden_suite.py  smoke_import_parse.sh  wheel_smoke.sh
tests/: conftest.py
tests/oracle/: test_tradingview_harness.py
tests/perf/: test_performance_smoke.py
tests/unit/: test_bar.py  test_extended_runtime_surface.py  test_generated_strategy_intents.py  test_inputs.py  test_intrabar_visual_reference.py  test_iteration_d_realtime_broker.py  test_math_precision.py  test_mtf_prehistory.py  test_na.py  test_operators.py  test_plot_recorder.py  test_provider.py  test_realtime_boundary_fixture.py  test_realtime_rollback.py  test_release_core_reference_io_edges.py  test_release_deep_edges.py  test_release_gates.py  test_release_math_io_edges.py  test_release_runtime_contract_edges.py  test_release_runtime_edges.py  test_release_surface.py  test_request_security.py  test_request_security_htf_overlap.py  test_request_security_lower_tf.py  test_runtime.py  test_runtime_parity_hardening.py  test_series.py  test_series_getitem_offbyone.py  test_series_getitem_offset.py  test_stage15_realtime_rollback.py  test_stage16_varip_boundary.py  test_stage7q_realtime_boundary_fixture.py  test_strategy.py  test_strategy_boundary.py  test_strategy_compatibility.py  test_ta.py  test_ta_cmo_tsi.py  test_ta_cross_state.py  test_ta_decomposition.py  test_ta_hardening_release_coverage.py  (+9 more)
