[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinelib"
version = "0.3.0"
description = "PineLib runtime foundation aligned to runtime contract v1.4."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "OpenAI Codex"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["pinelib", "pinelib.core", "pinelib.math", "pinelib.request", "pinelib.ta"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
packages = ["pinelib"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
